--- a/index.html
+++ b/index.html
@@ -8,17 +8,21 @@
     
     <meta name="description" content="查阅知识">
     
-    <link rel="preload" href="/assets/css/0.styles.265c87d3.css" as="style"><link rel="preload" href="/assets/js/app.9805c8c7.js" as="script"><link rel="preload" href="/assets/js/2.44bb021a.js" as="script"><link rel="preload" href="/assets/js/3.c8af71ac.js" as="script"><link rel="prefetch" href="/assets/js/4.c4a18432.js"><link rel="prefetch" href="/assets/js/5.1cc4cbbf.js"><link rel="prefetch" href="/assets/js/6.77fe2879.js"><link rel="prefetch" href="/assets/js/7.e1372bb1.js"><link rel="prefetch" href="/assets/js/8.40d6580a.js"><link rel="prefetch" href="/assets/js/9.bcfe6aa9.js">
+    <link rel="preload" href="/assets/css/0.styles.265c87d3.css" as="style"><link rel="preload" href="/assets/js/app.d9dab7ad.js" as="script"><link rel="preload" href="/assets/js/2.44bb021a.js" as="script"><link rel="preload" href="/assets/js/3.c8af71ac.js" as="script"><link rel="prefetch" href="/assets/js/4.c4a18432.js"><link rel="prefetch" href="/assets/js/5.1cc4cbbf.js"><link rel="prefetch" href="/assets/js/6.77fe2879.js"><link rel="prefetch" href="/assets/js/7.e1372bb1.js"><link rel="prefetch" href="/assets/js/8.40d6580a.js"><link rel="prefetch" href="/assets/js/9.bcfe6aa9.js">
     <link rel="stylesheet" href="/assets/css/0.styles.265c87d3.css">
   </head>
   <body>
     <div id="app" data-server-rendered="true"><div class="theme-container no-sidebar"><header class="navbar"><div class="sidebar-button"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" viewBox="0 0 448 512" class="icon"><path fill="currentColor" d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"></path></svg></div> <a href="/" aria-current="page" class="home-link router-link-exact-active router-link-active"><!----> <span class="site-name">技术博客</span></a> <div class="links"><div class="search-box"><input aria-label="Search" autocomplete="off" spellcheck="false" value=""> <!----></div> <nav class="nav-links can-hide"><div class="nav-item"><a href="/" aria-current="page" class="nav-link router-link-exact-active router-link-active">
   首页
 </a></div><div class="nav-item"><a href="/page1/" class="nav-link">
+  项目积累
+</a></div><div class="nav-item"><a href="/page2/" class="nav-link">
   前端技术
 </a></div> <!----></nav></div></header> <div class="sidebar-mask"></div> <aside class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="/" aria-current="page" class="nav-link router-link-exact-active router-link-active">
   首页
 </a></div><div class="nav-item"><a href="/page1/" class="nav-link">
+  项目积累
+</a></div><div class="nav-item"><a href="/page2/" class="nav-link">
   前端技术
 </a></div> <!----></nav>  <!----> </aside> <main class="home"><header class="hero"><!----> <!----> <!----> <!----></header> <!----> <div class="theme-default-content custom content__default"><div class="star"><div class="background"><canvas id="startrack"></canvas> <div style="height:700px;background:#212121;"></div> <div class="cover"></div></div> <div class="main"><div class="intro"><div class="container"><div class="hello"><h1 class="slogan">你看那个人，Ta好像一条狗啊...</h1> <h2><div class="circle"><span></span> <span></span> <span></span></div>
                 AOMR
@@ -37,6 +41,6 @@
               </h2> <h2><div class="circle"><span></span> <span></span> <span></span></div>
                 webAssembly
               </h2></div></div></div></div></div></div> <!----></main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.9805c8c7.js" defer></script><script src="/assets/js/2.44bb021a.js" defer></script><script src="/assets/js/3.c8af71ac.js" defer></script>
+    <script src="/assets/js/app.d9dab7ad.js" defer></script><script src="/assets/js/2.44bb021a.js" defer></script><script src="/assets/js/3.c8af71ac.js" defer></script>
   </body>
 </html>
