--- a/page1/index.html
+++ b/page1/index.html
@@ -8,19 +8,23 @@
     
     <meta name="description" content="查阅知识">
     
-    <link rel="preload" href="/assets/css/0.styles.265c87d3.css" as="style"><link rel="preload" href="/assets/js/app.9805c8c7.js" as="script"><link rel="preload" href="/assets/js/2.44bb021a.js" as="script"><link rel="preload" href="/assets/js/8.40d6580a.js" as="script"><link rel="prefetch" href="/assets/js/3.c8af71ac.js"><link rel="prefetch" href="/assets/js/4.c4a18432.js"><link rel="prefetch" href="/assets/js/5.1cc4cbbf.js"><link rel="prefetch" href="/assets/js/6.77fe2879.js"><link rel="prefetch" href="/assets/js/7.e1372bb1.js"><link rel="prefetch" href="/assets/js/9.bcfe6aa9.js">
+    <link rel="preload" href="/assets/css/0.styles.265c87d3.css" as="style"><link rel="preload" href="/assets/js/app.d9dab7ad.js" as="script"><link rel="preload" href="/assets/js/2.44bb021a.js" as="script"><link rel="preload" href="/assets/js/8.40d6580a.js" as="script"><link rel="prefetch" href="/assets/js/3.c8af71ac.js"><link rel="prefetch" href="/assets/js/4.c4a18432.js"><link rel="prefetch" href="/assets/js/5.1cc4cbbf.js"><link rel="prefetch" href="/assets/js/6.77fe2879.js"><link rel="prefetch" href="/assets/js/7.e1372bb1.js"><link rel="prefetch" href="/assets/js/9.bcfe6aa9.js">
     <link rel="stylesheet" href="/assets/css/0.styles.265c87d3.css">
   </head>
   <body>
     <div id="app" data-server-rendered="true"><div class="theme-container"><header class="navbar"><div class="sidebar-button"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" viewBox="0 0 448 512" class="icon"><path fill="currentColor" d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"></path></svg></div> <a href="/" class="home-link router-link-active"><!----> <span class="site-name">技术博客</span></a> <div class="links"><div class="search-box"><input aria-label="Search" autocomplete="off" spellcheck="false" value=""> <!----></div> <nav class="nav-links can-hide"><div class="nav-item"><a href="/" class="nav-link">
   首页
 </a></div><div class="nav-item"><a href="/page1/" aria-current="page" class="nav-link router-link-exact-active router-link-active">
+  项目积累
+</a></div><div class="nav-item"><a href="/page2/" class="nav-link">
   前端技术
 </a></div> <!----></nav></div></header> <div class="sidebar-mask"></div> <aside class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="/" class="nav-link">
   首页
 </a></div><div class="nav-item"><a href="/page1/" aria-current="page" class="nav-link router-link-exact-active router-link-active">
+  项目积累
+</a></div><div class="nav-item"><a href="/page2/" class="nav-link">
   前端技术
-</a></div> <!----></nav>  <ul class="sidebar-links"><li><section class="sidebar-group collapsable depth-0"><p class="sidebar-heading open"><span>微前端</span> <span class="arrow down"></span></p> <ul class="sidebar-links sidebar-group-items"><li><a href="/page1/qiankun.html" class="sidebar-link">微前端实践</a></li></ul></section></li></ul> </aside> <main class="page"> <div class="theme-default-content content__default"><h1 id="项目总结"><a href="#项目总结" class="header-anchor">#</a> 项目总结</h1></div> <footer class="page-edit"><!----> <!----></footer> <!----> </main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.9805c8c7.js" defer></script><script src="/assets/js/2.44bb021a.js" defer></script><script src="/assets/js/8.40d6580a.js" defer></script>
+</a></div> <!----></nav>  <ul class="sidebar-links"><li><section class="sidebar-group collapsable depth-0"><p class="sidebar-heading open"><span>项目总结</span> <span class="arrow down"></span></p> <ul class="sidebar-links sidebar-group-items"><li><a href="/page1/qiankun.html" class="sidebar-link">微前端实践</a></li></ul></section></li></ul> </aside> <main class="page"> <div class="theme-default-content content__default"><h1 id="项目总结"><a href="#项目总结" class="header-anchor">#</a> 项目总结</h1></div> <footer class="page-edit"><!----> <!----></footer> <!----> </main></div><div class="global-ui"></div></div>
+    <script src="/assets/js/app.d9dab7ad.js" defer></script><script src="/assets/js/2.44bb021a.js" defer></script><script src="/assets/js/8.40d6580a.js" defer></script>
   </body>
 </html>
