deploy: 82b0153be5e9f0c7edcb3f95d2142ae05e4a1474

--- a/page2/index.html
+++ b/page2/index.html
@@ -8,7 +8,7 @@
     
     <meta name="description" content="查阅知识">
     
-    <link rel="preload" href="/assets/css/0.styles.e3e41f22.css" as="style"><link rel="preload" href="/assets/js/app.9c9f5e6e.js" as="script"><link rel="preload" href="/assets/js/2.e7a65f9a.js" as="script"><link rel="preload" href="/assets/js/10.bf4108de.js" as="script"><link rel="prefetch" href="/assets/js/11.0615d662.js"><link rel="prefetch" href="/assets/js/3.f0ab6f1b.js"><link rel="prefetch" href="/assets/js/4.da74329c.js"><link rel="prefetch" href="/assets/js/5.bb42cf7d.js"><link rel="prefetch" href="/assets/js/6.bfcd954f.js"><link rel="prefetch" href="/assets/js/7.99c4ee62.js"><link rel="prefetch" href="/assets/js/8.1cc04f9b.js"><link rel="prefetch" href="/assets/js/9.bd59f923.js">
+    <link rel="preload" href="/assets/css/0.styles.e3e41f22.css" as="style"><link rel="preload" href="/assets/js/app.42a6554e.js" as="script"><link rel="preload" href="/assets/js/2.e7a65f9a.js" as="script"><link rel="preload" href="/assets/js/10.bf4108de.js" as="script"><link rel="prefetch" href="/assets/js/11.0615d662.js"><link rel="prefetch" href="/assets/js/3.f0ab6f1b.js"><link rel="prefetch" href="/assets/js/4.da74329c.js"><link rel="prefetch" href="/assets/js/5.bb42cf7d.js"><link rel="prefetch" href="/assets/js/6.bfcd954f.js"><link rel="prefetch" href="/assets/js/7.99c4ee62.js"><link rel="prefetch" href="/assets/js/8.1cc04f9b.js"><link rel="prefetch" href="/assets/js/9.cec5a324.js">
     <link rel="stylesheet" href="/assets/css/0.styles.e3e41f22.css">
   </head>
   <body>
@@ -24,7 +24,7 @@
   项目积累
 </a></div><div class="nav-item"><a href="/page2/" aria-current="page" class="nav-link router-link-exact-active router-link-active">
   前端技术
-</a></div> <!----></nav>  <ul class="sidebar-links"><li><section class="sidebar-group collapsable depth-0"><p class="sidebar-heading open"><span>前端技术</span> <span class="arrow down"></span></p> <ul class="sidebar-links sidebar-group-items"><li><a href="/page2/vue.html" class="sidebar-link">vue</a></li></ul></section></li></ul> </aside> <main class="page"> <div class="theme-default-content content__default"><h1 id="前端技术"><a href="#前端技术" class="header-anchor">#</a> 前端技术</h1></div> <footer class="page-edit"><!----> <div class="last-updated"><span class="prefix">上次更新:</span> <span class="time">4/23/2021, 12:32:37 PM</span></div></footer> <!----> </main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.9c9f5e6e.js" defer></script><script src="/assets/js/2.e7a65f9a.js" defer></script><script src="/assets/js/10.bf4108de.js" defer></script>
+</a></div> <!----></nav>  <ul class="sidebar-links"><li><section class="sidebar-group collapsable depth-0"><p class="sidebar-heading open"><span>前端技术</span> <span class="arrow down"></span></p> <ul class="sidebar-links sidebar-group-items"><li><a href="/page2/vue.html" class="sidebar-link">vue</a></li></ul></section></li></ul> </aside> <main class="page"> <div class="theme-default-content content__default"><h1 id="前端技术"><a href="#前端技术" class="header-anchor">#</a> 前端技术</h1></div> <footer class="page-edit"><!----> <div class="last-updated"><span class="prefix">上次更新:</span> <span class="time">4/25/2021, 2:50:53 AM</span></div></footer> <!----> </main></div><div class="global-ui"></div></div>
+    <script src="/assets/js/app.42a6554e.js" defer></script><script src="/assets/js/2.e7a65f9a.js" defer></script><script src="/assets/js/10.bf4108de.js" defer></script>
   </body>
 </html>
