deploy: 286355c9013f1c1c9f385ff7aed637644420e3e8

--- a/page1/index.html
+++ b/page1/index.html
@@ -8,7 +8,7 @@
     
     <meta name="description" content="查阅知识">
     
-    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.68dd49a1.js" as="script"><link rel="preload" href="/assets/js/2.e7a65f9a.js" as="script"><link rel="preload" href="/assets/js/8.1cc04f9b.js" as="script"><link rel="prefetch" href="/assets/js/10.7f80bc68.js"><link rel="prefetch" href="/assets/js/11.9c2419b6.js"><link rel="prefetch" href="/assets/js/3.f0ab6f1b.js"><link rel="prefetch" href="/assets/js/4.da74329c.js"><link rel="prefetch" href="/assets/js/5.bb42cf7d.js"><link rel="prefetch" href="/assets/js/6.bfcd954f.js"><link rel="prefetch" href="/assets/js/7.99c4ee62.js"><link rel="prefetch" href="/assets/js/9.6b9ec4c9.js">
+    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.bc21e3a9.js" as="script"><link rel="preload" href="/assets/js/2.72be0d30.js" as="script"><link rel="preload" href="/assets/js/8.d0cf2f99.js" as="script"><link rel="prefetch" href="/assets/js/10.b64419aa.js"><link rel="prefetch" href="/assets/js/11.d6b5cb4d.js"><link rel="prefetch" href="/assets/js/12.b3f4dcda.js"><link rel="prefetch" href="/assets/js/3.ff60a841.js"><link rel="prefetch" href="/assets/js/4.cbd5613a.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/7.f4adb7c6.js"><link rel="prefetch" href="/assets/js/9.b7b19714.js">
     <link rel="stylesheet" href="/assets/css/0.styles.692262fb.css">
   </head>
   <body>
@@ -24,7 +24,7 @@
   项目积累
 </a></div><div class="nav-item"><a href="/page2/" class="nav-link">
   前端技术
-</a></div> <!----></nav>  <ul class="sidebar-links"><li><section class="sidebar-group collapsable depth-0"><p class="sidebar-heading open"><span>项目总结</span> <span class="arrow down"></span></p> <ul class="sidebar-links sidebar-group-items"><li><a href="/page1/qiankun.html" class="sidebar-link">微前端实践</a></li></ul></section></li></ul> </aside> <main class="page"> <div class="theme-default-content content__default"><h1 id="项目总结"><a href="#项目总结" class="header-anchor">#</a> 项目总结</h1> <ul><li><a href="/page1/qiankun/">【2021-04-23】微前端实践</a></li></ul></div> <footer class="page-edit"><!----> <div class="last-updated"><span class="prefix">上次更新:</span> <span class="time">2021/4/25 17:29:33 周日</span></div></footer> <!----> </main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.68dd49a1.js" defer></script><script src="/assets/js/2.e7a65f9a.js" defer></script><script src="/assets/js/8.1cc04f9b.js" defer></script>
+</a></div> <!----></nav>  <ul class="sidebar-links"><li><section class="sidebar-group collapsable depth-0"><p class="sidebar-heading open"><span>项目总结</span> <span class="arrow down"></span></p> <ul class="sidebar-links sidebar-group-items"><li><a href="/page1/qiankun.html" class="sidebar-link">微前端实践</a></li><li><a href="/page1/build.html" class="sidebar-link">多环境打包配置</a></li></ul></section></li></ul> </aside> <main class="page"> <div class="theme-default-content content__default"><h1 id="项目总结"><a href="#项目总结" class="header-anchor">#</a> 项目总结</h1> <ul><li><a href="/page1/qiankun/">【2021-04-23】微前端实践</a></li></ul></div> <footer class="page-edit"><!----> <div class="last-updated"><span class="prefix">上次更新:</span> <span class="time">2021/5/13 18:0:59 周四</span></div></footer> <!----> </main></div><div class="global-ui"></div></div>
+    <script src="/assets/js/app.bc21e3a9.js" defer></script><script src="/assets/js/2.72be0d30.js" defer></script><script src="/assets/js/8.d0cf2f99.js" defer></script>
   </body>
 </html>
