--- a/404.html
+++ b/404.html
@@ -8,13 +8,13 @@
     
     <meta name="description" content="查阅知识">
     
-    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.68dd49a1.js" as="script"><link rel="preload" href="/assets/js/7.99c4ee62.js" as="script"><link rel="prefetch" href="/assets/js/10.7f80bc68.js"><link rel="prefetch" href="/assets/js/11.9c2419b6.js"><link rel="prefetch" href="/assets/js/2.e7a65f9a.js"><link rel="prefetch" href="/assets/js/3.f0ab6f1b.js"><link rel="prefetch" href="/assets/js/4.da74329c.js"><link rel="prefetch" href="/assets/js/5.bb42cf7d.js"><link rel="prefetch" href="/assets/js/6.bfcd954f.js"><link rel="prefetch" href="/assets/js/8.1cc04f9b.js"><link rel="prefetch" href="/assets/js/9.6b9ec4c9.js">
+    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.bc21e3a9.js" as="script"><link rel="preload" href="/assets/js/7.f4adb7c6.js" as="script"><link rel="prefetch" href="/assets/js/10.b64419aa.js"><link rel="prefetch" href="/assets/js/11.d6b5cb4d.js"><link rel="prefetch" href="/assets/js/12.b3f4dcda.js"><link rel="prefetch" href="/assets/js/2.72be0d30.js"><link rel="prefetch" href="/assets/js/3.ff60a841.js"><link rel="prefetch" href="/assets/js/4.cbd5613a.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/8.d0cf2f99.js"><link rel="prefetch" href="/assets/js/9.b7b19714.js">
     <link rel="stylesheet" href="/assets/css/0.styles.692262fb.css">
   </head>
   <body>
     <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.68dd49a1.js" defer></script><script src="/assets/js/7.99c4ee62.js" defer></script>
+    <script src="/assets/js/app.bc21e3a9.js" defer></script><script src="/assets/js/7.f4adb7c6.js" defer></script>
   </body>
 </html>
