deploy: 5b79fe022e97bf8bc9fcee99cdad06246f1f652d

--- a/page1/qiankun.html
+++ b/page1/qiankun.html
@@ -8,7 +8,7 @@
     
     <meta name="description" content="查阅知识">
     
-    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.11a61649.js" as="script"><link rel="preload" href="/assets/js/2.72be0d30.js" as="script"><link rel="preload" href="/assets/js/10.b64419aa.js" as="script"><link rel="prefetch" href="/assets/js/11.b643587f.js"><link rel="prefetch" href="/assets/js/12.8beef3e9.js"><link rel="prefetch" href="/assets/js/13.d5ff6af9.js"><link rel="prefetch" href="/assets/js/3.ff60a841.js"><link rel="prefetch" href="/assets/js/4.dfd3b4ff.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/7.f4adb7c6.js"><link rel="prefetch" href="/assets/js/8.38984d10.js"><link rel="prefetch" href="/assets/js/9.b7b19714.js">
+    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.86561429.js" as="script"><link rel="preload" href="/assets/js/2.72be0d30.js" as="script"><link rel="preload" href="/assets/js/11.84d5cf67.js" as="script"><link rel="prefetch" href="/assets/js/10.8fa7b673.js"><link rel="prefetch" href="/assets/js/12.011778b8.js"><link rel="prefetch" href="/assets/js/13.8c121cb3.js"><link rel="prefetch" href="/assets/js/14.30f2b98d.js"><link rel="prefetch" href="/assets/js/15.741fa68f.js"><link rel="prefetch" href="/assets/js/3.ff60a841.js"><link rel="prefetch" href="/assets/js/4.c85986d1.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/7.f4adb7c6.js"><link rel="prefetch" href="/assets/js/8.afe0d347.js"><link rel="prefetch" href="/assets/js/9.b7b19714.js">
     <link rel="stylesheet" href="/assets/css/0.styles.692262fb.css">
   </head>
   <body>
@@ -192,11 +192,11 @@
 </code></pre></div><h4 id="前端如何迁移"><a href="#前端如何迁移" class="header-anchor">#</a> 前端如何迁移</h4> <ol><li>创建子应用</li></ol> <p>进入根目录下的 subapp文件夹</p> <div class="language- extra-class"><pre class="language-text"><code>// 执行以下命令
 gg-cli init &lt;子应用名字&gt;  // 规范 模块名 + app;例如 sbis-app, tlps-app
 // 此时会生成相应的子应用，复制教师平台响应代码到子应用下
-</code></pre></div><ol start="2"><li>启动子应用</li> <li>多个子应用使用同一页面的处理</li></ol> <p>每个子应用绝对独立，不能出现页面混用，实现完全物理隔离</p> <h4 id="目前架构的问题"><a href="#目前架构的问题" class="header-anchor">#</a> 目前架构的问题</h4> <p>微前端还是存在一些不足之处，当然框架本来就不能权衡所有问题，它是一个不断演变和发展的过程。</p> <ol><li>启动项目 main,nav-app,public-app为必须启动</li> <li>打包配置，main必须进行打包</li> <li>配置过于繁杂</li></ol> <h4 id="未来需要做什么"><a href="#未来需要做什么" class="header-anchor">#</a> 未来需要做什么？</h4> <ol><li>子应用可视化管理</li> <li>启动，打包 cli，开发出符合目前的部署方式</li> <li>系统埋点，监控</li></ol></div> <footer class="page-edit"><!----> <div class="last-updated"><span class="prefix">上次更新:</span> <span class="time">2021/5/14 9:44:3 周五</span></div></footer> <div class="page-nav"><p class="inner"><!----> <span class="next"><a href="/page1/build.html">
+</code></pre></div><ol start="2"><li>启动子应用</li> <li>多个子应用使用同一页面的处理</li></ol> <p>每个子应用绝对独立，不能出现页面混用，实现完全物理隔离</p> <h4 id="目前架构的问题"><a href="#目前架构的问题" class="header-anchor">#</a> 目前架构的问题</h4> <p>微前端还是存在一些不足之处，当然框架本来就不能权衡所有问题，它是一个不断演变和发展的过程。</p> <ol><li>启动项目 main,nav-app,public-app为必须启动</li> <li>打包配置，main必须进行打包</li> <li>配置过于繁杂</li></ol> <h4 id="未来需要做什么"><a href="#未来需要做什么" class="header-anchor">#</a> 未来需要做什么？</h4> <ol><li>子应用可视化管理</li> <li>启动，打包 cli，开发出符合目前的部署方式</li> <li>系统埋点，监控</li></ol></div> <footer class="page-edit"><!----> <div class="last-updated"><span class="prefix">上次更新:</span> <span class="time">2021/5/16 9:15:16 周日</span></div></footer> <div class="page-nav"><p class="inner"><!----> <span class="next"><a href="/page1/build.html">
         多环境打包配置
       </a>
       →
     </span></p></div> </main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.11a61649.js" defer></script><script src="/assets/js/2.72be0d30.js" defer></script><script src="/assets/js/10.b64419aa.js" defer></script>
+    <script src="/assets/js/app.86561429.js" defer></script><script src="/assets/js/2.72be0d30.js" defer></script><script src="/assets/js/11.84d5cf67.js" defer></script>
   </body>
 </html>
