--- a/page1/webpack.html
+++ b/page1/webpack.html
@@ -8,7 +8,7 @@
     
     <meta name="description" content="查阅知识">
     
-    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.11a61649.js" as="script"><link rel="preload" href="/assets/js/2.72be0d30.js" as="script"><link rel="preload" href="/assets/js/11.b643587f.js" as="script"><link rel="prefetch" href="/assets/js/10.b64419aa.js"><link rel="prefetch" href="/assets/js/12.8beef3e9.js"><link rel="prefetch" href="/assets/js/13.d5ff6af9.js"><link rel="prefetch" href="/assets/js/3.ff60a841.js"><link rel="prefetch" href="/assets/js/4.dfd3b4ff.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/7.f4adb7c6.js"><link rel="prefetch" href="/assets/js/8.38984d10.js"><link rel="prefetch" href="/assets/js/9.b7b19714.js">
+    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.86561429.js" as="script"><link rel="preload" href="/assets/js/2.72be0d30.js" as="script"><link rel="preload" href="/assets/js/13.8c121cb3.js" as="script"><link rel="prefetch" href="/assets/js/10.8fa7b673.js"><link rel="prefetch" href="/assets/js/11.84d5cf67.js"><link rel="prefetch" href="/assets/js/12.011778b8.js"><link rel="prefetch" href="/assets/js/14.30f2b98d.js"><link rel="prefetch" href="/assets/js/15.741fa68f.js"><link rel="prefetch" href="/assets/js/3.ff60a841.js"><link rel="prefetch" href="/assets/js/4.c85986d1.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/7.f4adb7c6.js"><link rel="prefetch" href="/assets/js/8.afe0d347.js"><link rel="prefetch" href="/assets/js/9.b7b19714.js">
     <link rel="stylesheet" href="/assets/css/0.styles.692262fb.css">
   </head>
   <body>
@@ -57,11 +57,11 @@ module.exports = {
 
 // 输出
 console.log(envConfig) // {api: &quot;www.baidu.com&quot;}
-</code></pre></div></div> <footer class="page-edit"><!----> <div class="last-updated"><span class="prefix">上次更新:</span> <span class="time">2021/5/14 9:44:3 周五</span></div></footer> <div class="page-nav"><p class="inner"><span class="prev">
+</code></pre></div></div> <footer class="page-edit"><!----> <div class="last-updated"><span class="prefix">上次更新:</span> <span class="time">2021/5/16 9:15:16 周日</span></div></footer> <div class="page-nav"><p class="inner"><span class="prev">
       ←
       <a href="/page1/build.html" class="prev">
         多环境打包配置
       </a></span> <!----></p></div> </main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.11a61649.js" defer></script><script src="/assets/js/2.72be0d30.js" defer></script><script src="/assets/js/11.b643587f.js" defer></script>
+    <script src="/assets/js/app.86561429.js" defer></script><script src="/assets/js/2.72be0d30.js" defer></script><script src="/assets/js/13.8c121cb3.js" defer></script>
   </body>
 </html>
