--- a/404.html
+++ b/404.html
@@ -8,13 +8,13 @@
     
     <meta name="description" content="查阅知识">
     
-    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.86561429.js" as="script"><link rel="preload" href="/assets/js/7.f4adb7c6.js" as="script"><link rel="prefetch" href="/assets/js/10.8fa7b673.js"><link rel="prefetch" href="/assets/js/11.84d5cf67.js"><link rel="prefetch" href="/assets/js/12.011778b8.js"><link rel="prefetch" href="/assets/js/13.8c121cb3.js"><link rel="prefetch" href="/assets/js/14.30f2b98d.js"><link rel="prefetch" href="/assets/js/15.741fa68f.js"><link rel="prefetch" href="/assets/js/2.72be0d30.js"><link rel="prefetch" href="/assets/js/3.ff60a841.js"><link rel="prefetch" href="/assets/js/4.c85986d1.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/8.afe0d347.js"><link rel="prefetch" href="/assets/js/9.b7b19714.js">
+    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.458b6565.js" as="script"><link rel="preload" href="/assets/js/7.f4adb7c6.js" as="script"><link rel="prefetch" href="/assets/js/10.8fa7b673.js"><link rel="prefetch" href="/assets/js/11.84d5cf67.js"><link rel="prefetch" href="/assets/js/12.011778b8.js"><link rel="prefetch" href="/assets/js/13.8c121cb3.js"><link rel="prefetch" href="/assets/js/14.30f2b98d.js"><link rel="prefetch" href="/assets/js/15.741fa68f.js"><link rel="prefetch" href="/assets/js/2.72be0d30.js"><link rel="prefetch" href="/assets/js/3.ff60a841.js"><link rel="prefetch" href="/assets/js/4.c85986d1.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/8.afe0d347.js"><link rel="prefetch" href="/assets/js/9.b7b19714.js">
     <link rel="stylesheet" href="/assets/css/0.styles.692262fb.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.86561429.js" defer></script><script src="/assets/js/7.f4adb7c6.js" defer></script>
+    <script src="/assets/js/app.458b6565.js" defer></script><script src="/assets/js/7.f4adb7c6.js" defer></script>
   </body>
 </html>
