--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <meta name="description" content="查阅知识">
     
-    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.12ae34ef.js" as="script"><link rel="preload" href="/assets/js/2.72be0d30.js" as="script"><link rel="preload" href="/assets/js/3.ff60a841.js" as="script"><link rel="prefetch" href="/assets/js/10.79e9331d.js"><link rel="prefetch" href="/assets/js/11.a6236ba8.js"><link rel="prefetch" href="/assets/js/12.22f21a2a.js"><link rel="prefetch" href="/assets/js/13.209273f2.js"><link rel="prefetch" href="/assets/js/14.664b9912.js"><link rel="prefetch" href="/assets/js/15.01f521e0.js"><link rel="prefetch" href="/assets/js/16.57563cc2.js"><link rel="prefetch" href="/assets/js/4.dc7b5266.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/7.f4adb7c6.js"><link rel="prefetch" href="/assets/js/8.c184e180.js"><link rel="prefetch" href="/assets/js/9.77d08f9f.js">
+    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.3c6c1c75.js" as="script"><link rel="preload" href="/assets/js/2.72be0d30.js" as="script"><link rel="preload" href="/assets/js/3.3e984bc1.js" as="script"><link rel="prefetch" href="/assets/js/10.8fa7b673.js"><link rel="prefetch" href="/assets/js/11.e834eb72.js"><link rel="prefetch" href="/assets/js/12.22f21a2a.js"><link rel="prefetch" href="/assets/js/13.209273f2.js"><link rel="prefetch" href="/assets/js/14.664b9912.js"><link rel="prefetch" href="/assets/js/15.01f521e0.js"><link rel="prefetch" href="/assets/js/16.57563cc2.js"><link rel="prefetch" href="/assets/js/4.dc7b5266.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/7.f4adb7c6.js"><link rel="prefetch" href="/assets/js/8.c184e180.js"><link rel="prefetch" href="/assets/js/9.b7b19714.js">
     <link rel="stylesheet" href="/assets/css/0.styles.692262fb.css">
   </head>
   <body>
@@ -16,17 +16,45 @@
   首页
 </a></div><div class="nav-item"><a href="/page1/" class="nav-link">
   项目积累
-</a></div><div class="nav-item"><a href="/page2/" class="nav-link">
-  前端技术
-</a></div> <!----></nav></div></header> <div class="sidebar-mask"></div> <aside class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="/" aria-current="page" class="nav-link router-link-exact-active router-link-active">
+</a></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="前端技术" class="dropdown-title"><span class="title">前端技术</span> <span class="arrow down"></span></button> <button type="button" aria-label="前端技术" class="mobile-dropdown-title"><span class="title">前端技术</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
+  webpack
+</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
+  TS
+</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
+  vue3.0
+</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
+  服务端渲染
+</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
+  node.js
+</a></li></ul></div></div> <!----></nav></div></header> <div class="sidebar-mask"></div> <aside class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="/" aria-current="page" class="nav-link router-link-exact-active router-link-active">
   首页
 </a></div><div class="nav-item"><a href="/page1/" class="nav-link">
   项目积累
-</a></div><div class="nav-item"><a href="/page2/" class="nav-link">
-  前端技术
-</a></div> <!----></nav>  <!----> </aside> <main class="home"><header class="hero"><!----> <!----> <!----> <!----></header> <!----> <div class="theme-default-content custom content__default"><div class="star"><div class="background"><canvas id="startrack"></canvas> <div style="height:700px;background:#212121;"></div> <div class="cover"></div></div> <div class="main"><div class="intro"><div class="container"><div class="hello"><h1 class="slogan">你看那个人，Ta好像一条狗啊...</h1> <h2><div class="circle"><span></span> <span></span> <span></span></div>
+</a></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="前端技术" class="dropdown-title"><span class="title">前端技术</span> <span class="arrow down"></span></button> <button type="button" aria-label="前端技术" class="mobile-dropdown-title"><span class="title">前端技术</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
+  webpack
+</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
+  TS
+</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
+  vue3.0
+</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
+  服务端渲染
+</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
+  node.js
+</a></li></ul></div></div> <!----></nav>  <!----> </aside> <main class="home"><header class="hero"><!----> <!----> <!----> <!----></header> <!----> <div class="theme-default-content custom content__default"><div class="star"><div class="background"><canvas id="startrack"></canvas> <div style="height:700px;background:#212121;"></div> <div class="cover"></div></div> <div class="main"><div class="intro"><div class="container"><div class="hello"><h1 class="slogan">你看那个人，Ta好像一条狗啊...</h1> <h2><div class="circle"><span></span> <span></span> <span></span></div>
                 AOMR
-              </h2></div></div></div> <div class="intro"><div class="container" style="height:700px;"><div class="hello reset-bottom"><h1 class="slogan">近期目标</h1> <h2><div class="circle"><span></span> <span></span> <span></span></div></h2> <h2><div class="circle"><span></span> <span></span> <span></span></div></h2> <h2><div class="circle"><span></span> <span></span> <span></span></div></h2> <h2><div class="circle"><span></span> <span></span> <span></span></div></h2> <h2><div class="circle"><span></span> <span></span> <span></span></div></h2> <h2><div class="circle"><span></span> <span></span> <span></span></div></h2> <h2><div class="circle"><span></span> <span></span> <span></span></div></h2></div></div></div></div></div></div> <!----></main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.12ae34ef.js" defer></script><script src="/assets/js/2.72be0d30.js" defer></script><script src="/assets/js/3.ff60a841.js" defer></script>
+              </h2></div></div></div> <div class="intro"><div class="container" style="height:700px;"><div class="hello reset-bottom"><h1 class="slogan">近期目标</h1> <h2><div class="circle"><span></span> <span></span> <span></span></div>
+                构建工具webpack的深入学习 
+              </h2><h2><div class="circle"><span></span> <span></span> <span></span></div>
+                TS的学习以及使用 
+              </h2><h2><div class="circle"><span></span> <span></span> <span></span></div>
+                代码框架 vue3.0 的深入学习及快速使用 
+              </h2><h2><div class="circle"><span></span> <span></span> <span></span></div>
+                熟悉浏览器解析以及工作原理 
+              </h2><h2><div class="circle"><span></span> <span></span> <span></span></div>
+                熟悉服务端渲染 
+              </h2><h2><div class="circle"><span></span> <span></span> <span></span></div>
+                熟悉node.js，并可以运用接口服务 
+              </h2></div></div></div></div></div></div> <!----></main></div><div class="global-ui"></div></div>
+    <script src="/assets/js/app.3c6c1c75.js" defer></script><script src="/assets/js/2.72be0d30.js" defer></script><script src="/assets/js/3.3e984bc1.js" defer></script>
   </body>
 </html>
