--- a/page1/index.html
+++ b/page1/index.html
@@ -8,7 +8,7 @@
     
     <meta name="description" content="查阅知识">
     
-    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.12ae34ef.js" as="script"><link rel="preload" href="/assets/js/2.72be0d30.js" as="script"><link rel="preload" href="/assets/js/8.c184e180.js" as="script"><link rel="prefetch" href="/assets/js/10.79e9331d.js"><link rel="prefetch" href="/assets/js/11.a6236ba8.js"><link rel="prefetch" href="/assets/js/12.22f21a2a.js"><link rel="prefetch" href="/assets/js/13.209273f2.js"><link rel="prefetch" href="/assets/js/14.664b9912.js"><link rel="prefetch" href="/assets/js/15.01f521e0.js"><link rel="prefetch" href="/assets/js/16.57563cc2.js"><link rel="prefetch" href="/assets/js/3.ff60a841.js"><link rel="prefetch" href="/assets/js/4.dc7b5266.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/7.f4adb7c6.js"><link rel="prefetch" href="/assets/js/9.77d08f9f.js">
+    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.3c6c1c75.js" as="script"><link rel="preload" href="/assets/js/2.72be0d30.js" as="script"><link rel="preload" href="/assets/js/8.c184e180.js" as="script"><link rel="prefetch" href="/assets/js/10.8fa7b673.js"><link rel="prefetch" href="/assets/js/11.e834eb72.js"><link rel="prefetch" href="/assets/js/12.22f21a2a.js"><link rel="prefetch" href="/assets/js/13.209273f2.js"><link rel="prefetch" href="/assets/js/14.664b9912.js"><link rel="prefetch" href="/assets/js/15.01f521e0.js"><link rel="prefetch" href="/assets/js/16.57563cc2.js"><link rel="prefetch" href="/assets/js/3.3e984bc1.js"><link rel="prefetch" href="/assets/js/4.dc7b5266.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/7.f4adb7c6.js"><link rel="prefetch" href="/assets/js/9.b7b19714.js">
     <link rel="stylesheet" href="/assets/css/0.styles.692262fb.css">
   </head>
   <body>
@@ -16,15 +16,31 @@
   首页
 </a></div><div class="nav-item"><a href="/page1/" aria-current="page" class="nav-link router-link-exact-active router-link-active">
   项目积累
-</a></div><div class="nav-item"><a href="/page2/" class="nav-link">
-  前端技术
-</a></div> <!----></nav></div></header> <div class="sidebar-mask"></div> <aside class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="/" class="nav-link">
+</a></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="前端技术" class="dropdown-title"><span class="title">前端技术</span> <span class="arrow down"></span></button> <button type="button" aria-label="前端技术" class="mobile-dropdown-title"><span class="title">前端技术</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
+  webpack
+</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
+  TS
+</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
+  vue3.0
+</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
+  服务端渲染
+</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
+  node.js
+</a></li></ul></div></div> <!----></nav></div></header> <div class="sidebar-mask"></div> <aside class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="/" class="nav-link">
   首页
 </a></div><div class="nav-item"><a href="/page1/" aria-current="page" class="nav-link router-link-exact-active router-link-active">
   项目积累
-</a></div><div class="nav-item"><a href="/page2/" class="nav-link">
-  前端技术
-</a></div> <!----></nav>  <ul class="sidebar-links"><li><section class="sidebar-group collapsable depth-0"><p class="sidebar-heading open"><span>项目总结</span> <span class="arrow down"></span></p> <ul class="sidebar-links sidebar-group-items"><li><a href="/page1/qiankun.html" class="sidebar-link">微前端实践</a></li><li><a href="/page1/build.html" class="sidebar-link">多环境打包配置</a></li><li><a href="/page1/webpack.html" class="sidebar-link">webpack.DefinePlugin使用</a><ul class="sidebar-sub-headers"></ul></li><li><a href="/page1/exportPdf.html" class="sidebar-link">一个导出pdf的方案</a></li><li><a href="/page1/scp2.html" class="sidebar-link">前端自动化发布</a></li><li><a href="/page1/hover.html" class="sidebar-link">vue中动态绑定hover效果</a></li></ul></section></li></ul> </aside> <main class="page"> <div class="theme-default-content content__default"><h1 id="项目总结"><a href="#项目总结" class="header-anchor">#</a> 项目总结</h1> <ul><li><a href="/page1/qiankun/">【2021-04-23】微前端实践</a></li> <li><a href="/page1/build/">【2021-05-13】多环境打包配置</a></li> <li><a href="/page1/webpack/">【2021-05-14】 webpack.DefinePlugin</a></li> <li><a href="/page1/exportPdf/">【2021-05-15】 一个导出pdf的方案</a></li> <li><a href="/page1/scp2/">【2021-05-16】 前端自动化发布</a></li> <li><a href="/page1/hover/">【2021-05-17】 vue中动态绑定hover效果</a></li></ul></div> <footer class="page-edit"><!----> <div class="last-updated"><span class="prefix">上次更新:</span> <span class="time">2021/5/16 9:37:5 周日</span></div></footer> <!----> </main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.12ae34ef.js" defer></script><script src="/assets/js/2.72be0d30.js" defer></script><script src="/assets/js/8.c184e180.js" defer></script>
+</a></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="前端技术" class="dropdown-title"><span class="title">前端技术</span> <span class="arrow down"></span></button> <button type="button" aria-label="前端技术" class="mobile-dropdown-title"><span class="title">前端技术</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
+  webpack
+</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
+  TS
+</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
+  vue3.0
+</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
+  服务端渲染
+</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
+  node.js
+</a></li></ul></div></div> <!----></nav>  <ul class="sidebar-links"><li><section class="sidebar-group depth-0"><p class="sidebar-heading open"><span>项目总结</span> <!----></p> <ul class="sidebar-links sidebar-group-items"><li><a href="/page1/qiankun.html" class="sidebar-link">微前端实践</a></li><li><a href="/page1/build.html" class="sidebar-link">多环境打包配置</a></li><li><a href="/page1/webpack.html" class="sidebar-link">webpack.DefinePlugin使用</a><ul class="sidebar-sub-headers"></ul></li><li><a href="/page1/exportPdf.html" class="sidebar-link">一个导出pdf的方案</a></li><li><a href="/page1/scp2.html" class="sidebar-link">前端自动化发布</a></li><li><a href="/page1/hover.html" class="sidebar-link">vue中动态绑定hover效果</a></li></ul></section></li></ul> </aside> <main class="page"> <div class="theme-default-content content__default"><h1 id="项目总结"><a href="#项目总结" class="header-anchor">#</a> 项目总结</h1> <ul><li><a href="/page1/qiankun/">【2021-04-23】微前端实践</a></li> <li><a href="/page1/build/">【2021-05-13】多环境打包配置</a></li> <li><a href="/page1/webpack/">【2021-05-14】 webpack.DefinePlugin</a></li> <li><a href="/page1/exportPdf/">【2021-05-15】 一个导出pdf的方案</a></li> <li><a href="/page1/scp2/">【2021-05-16】 前端自动化发布</a></li> <li><a href="/page1/hover/">【2021-05-17】 vue中动态绑定hover效果</a></li></ul></div> <footer class="page-edit"><!----> <div class="last-updated"><span class="prefix">上次更新:</span> <span class="time">2021/5/16 15:48:37 周日</span></div></footer> <!----> </main></div><div class="global-ui"></div></div>
+    <script src="/assets/js/app.3c6c1c75.js" defer></script><script src="/assets/js/2.72be0d30.js" defer></script><script src="/assets/js/8.c184e180.js" defer></script>
   </body>
 </html>
