deploy: 8658ebc6e6f2522be3ba4baed7c768279ee58b4e

--- a/page1/exportPdf.html
+++ b/page1/exportPdf.html
@@ -8,7 +8,7 @@
     
     <meta name="description" content="查阅知识">
     
-    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.3c6c1c75.js" as="script"><link rel="preload" href="/assets/js/2.72be0d30.js" as="script"><link rel="preload" href="/assets/js/10.8fa7b673.js" as="script"><link rel="prefetch" href="/assets/js/11.e834eb72.js"><link rel="prefetch" href="/assets/js/12.22f21a2a.js"><link rel="prefetch" href="/assets/js/13.209273f2.js"><link rel="prefetch" href="/assets/js/14.664b9912.js"><link rel="prefetch" href="/assets/js/15.01f521e0.js"><link rel="prefetch" href="/assets/js/16.57563cc2.js"><link rel="prefetch" href="/assets/js/3.3e984bc1.js"><link rel="prefetch" href="/assets/js/4.dc7b5266.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/7.f4adb7c6.js"><link rel="prefetch" href="/assets/js/8.c184e180.js"><link rel="prefetch" href="/assets/js/9.b7b19714.js">
+    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.054fe82c.js" as="script"><link rel="preload" href="/assets/js/2.72be0d30.js" as="script"><link rel="preload" href="/assets/js/10.79e9331d.js" as="script"><link rel="prefetch" href="/assets/js/11.0b6b95ca.js"><link rel="prefetch" href="/assets/js/12.afdfcc5d.js"><link rel="prefetch" href="/assets/js/13.0217ea88.js"><link rel="prefetch" href="/assets/js/14.664b9912.js"><link rel="prefetch" href="/assets/js/15.01f521e0.js"><link rel="prefetch" href="/assets/js/16.57563cc2.js"><link rel="prefetch" href="/assets/js/3.3e984bc1.js"><link rel="prefetch" href="/assets/js/4.dc7b5266.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/7.f4adb7c6.js"><link rel="prefetch" href="/assets/js/8.12697bf5.js"><link rel="prefetch" href="/assets/js/9.c03074ea.js">
     <link rel="stylesheet" href="/assets/css/0.styles.692262fb.css">
   </head>
   <body>
@@ -17,35 +17,19 @@
 </a></div><div class="nav-item"><a href="/page1/" class="nav-link router-link-active">
   项目积累
 </a></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="前端技术" class="dropdown-title"><span class="title">前端技术</span> <span class="arrow down"></span></button> <button type="button" aria-label="前端技术" class="mobile-dropdown-title"><span class="title">前端技术</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
-  webpack
-</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
-  TS
-</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
-  vue3.0
-</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
-  服务端渲染
-</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
-  node.js
+  vue
 </a></li></ul></div></div> <!----></nav></div></header> <div class="sidebar-mask"></div> <aside class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="/" class="nav-link">
   首页
 </a></div><div class="nav-item"><a href="/page1/" class="nav-link router-link-active">
   项目积累
 </a></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="前端技术" class="dropdown-title"><span class="title">前端技术</span> <span class="arrow down"></span></button> <button type="button" aria-label="前端技术" class="mobile-dropdown-title"><span class="title">前端技术</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
-  webpack
-</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
-  TS
-</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
-  vue3.0
-</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
-  服务端渲染
-</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link">
-  node.js
+  vue
 </a></li></ul></div></div> <!----></nav>  <ul class="sidebar-links"><li><section class="sidebar-group depth-0"><p class="sidebar-heading open"><span>项目总结</span> <!----></p> <ul class="sidebar-links sidebar-group-items"><li><a href="/page1/qiankun.html" class="sidebar-link">微前端实践</a></li><li><a href="/page1/build.html" class="sidebar-link">多环境打包配置</a></li><li><a href="/page1/webpack.html" class="sidebar-link">webpack.DefinePlugin使用</a><ul class="sidebar-sub-headers"></ul></li><li><a href="/page1/exportPdf.html" aria-current="page" class="active sidebar-link">一个导出pdf的方案</a></li><li><a href="/page1/scp2.html" class="sidebar-link">前端自动化发布</a></li><li><a href="/page1/hover.html" class="sidebar-link">vue中动态绑定hover效果</a></li></ul></section></li></ul> </aside> <main class="page"> <div class="theme-default-content content__default"><h4 id="puppeteer"><a href="#puppeteer" class="header-anchor">#</a> puppeteer</h4> <p>Puppeteer 是一个 Node 库，它提供了高级 API 来通过 DevTools 协议控制 Chrome 或 Chromium。</p> <p>生成页面的屏幕截图和 PDF；
 爬取 SPA 并生成预渲染的内容（即 SSR）；
 自动进行表单提交，UI 测试，键盘输入等；
 创建最新的自动化测试环境。使用最新的 JavaScript 和浏览器功能，直接在最新版本的 Chrome 中运行测试；
 捕获时间线跟踪网站，以帮助诊断性能问题；
-测试 Chrome 扩展程序。</p> <p>从上可见，Puppeteer 可以实现在Node 端生成页面的 PDF 功能。</p> <p><a href="https://github.com/hejianfang/puppeteer" target="_blank" rel="noopener noreferrer">puppeteerPdfDemo<span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a></p> <p>参考</p> <p><a href="https://jelly.jd.com/article/604a15ce9c61f9014c2195ed" target="_blank" rel="noopener noreferrer">实践指南之网页转PDF<span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a></p></div> <footer class="page-edit"><!----> <div class="last-updated"><span class="prefix">上次更新:</span> <span class="time">2021/5/16 15:48:37 周日</span></div></footer> <div class="page-nav"><p class="inner"><span class="prev">
+测试 Chrome 扩展程序。</p> <p>从上可见，Puppeteer 可以实现在Node 端生成页面的 PDF 功能。</p> <p><a href="https://github.com/hejianfang/puppeteer" target="_blank" rel="noopener noreferrer">puppeteerPdfDemo<span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a></p> <p>参考</p> <p><a href="https://jelly.jd.com/article/604a15ce9c61f9014c2195ed" target="_blank" rel="noopener noreferrer">实践指南之网页转PDF<span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a></p></div> <footer class="page-edit"><!----> <div class="last-updated"><span class="prefix">上次更新:</span> <span class="time">2021/5/17 9:54:20 周一</span></div></footer> <div class="page-nav"><p class="inner"><span class="prev">
       ←
       <a href="/page1/webpack.html" class="prev">
         webpack.DefinePlugin使用
@@ -54,6 +38,6 @@
       </a>
       →
     </span></p></div> </main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.3c6c1c75.js" defer></script><script src="/assets/js/2.72be0d30.js" defer></script><script src="/assets/js/10.8fa7b673.js" defer></script>
+    <script src="/assets/js/app.054fe82c.js" defer></script><script src="/assets/js/2.72be0d30.js" defer></script><script src="/assets/js/10.79e9331d.js" defer></script>
   </body>
 </html>
