--- a/page2/vue.html
+++ b/page2/vue.html
@@ -8,7 +8,7 @@
     
     <meta name="description" content="查阅知识">
     
-    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.3c6c1c75.js" as="script"><link rel="preload" href="/assets/js/2.72be0d30.js" as="script"><link rel="preload" href="/assets/js/16.57563cc2.js" as="script"><link rel="prefetch" href="/assets/js/10.8fa7b673.js"><link rel="prefetch" href="/assets/js/11.e834eb72.js"><link rel="prefetch" href="/assets/js/12.22f21a2a.js"><link rel="prefetch" href="/assets/js/13.209273f2.js"><link rel="prefetch" href="/assets/js/14.664b9912.js"><link rel="prefetch" href="/assets/js/15.01f521e0.js"><link rel="prefetch" href="/assets/js/3.3e984bc1.js"><link rel="prefetch" href="/assets/js/4.dc7b5266.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/7.f4adb7c6.js"><link rel="prefetch" href="/assets/js/8.c184e180.js"><link rel="prefetch" href="/assets/js/9.b7b19714.js">
+    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.054fe82c.js" as="script"><link rel="preload" href="/assets/js/2.72be0d30.js" as="script"><link rel="preload" href="/assets/js/16.57563cc2.js" as="script"><link rel="prefetch" href="/assets/js/10.79e9331d.js"><link rel="prefetch" href="/assets/js/11.0b6b95ca.js"><link rel="prefetch" href="/assets/js/12.afdfcc5d.js"><link rel="prefetch" href="/assets/js/13.0217ea88.js"><link rel="prefetch" href="/assets/js/14.664b9912.js"><link rel="prefetch" href="/assets/js/15.01f521e0.js"><link rel="prefetch" href="/assets/js/3.3e984bc1.js"><link rel="prefetch" href="/assets/js/4.dc7b5266.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/7.f4adb7c6.js"><link rel="prefetch" href="/assets/js/8.12697bf5.js"><link rel="prefetch" href="/assets/js/9.c03074ea.js">
     <link rel="stylesheet" href="/assets/css/0.styles.692262fb.css">
   </head>
   <body>
@@ -17,30 +17,14 @@
 </a></div><div class="nav-item"><a href="/page1/" class="nav-link">
   项目积累
 </a></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="前端技术" class="dropdown-title"><span class="title">前端技术</span> <span class="arrow down"></span></button> <button type="button" aria-label="前端技术" class="mobile-dropdown-title"><span class="title">前端技术</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link router-link-active">
-  webpack
-</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link router-link-active">
-  TS
-</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link router-link-active">
-  vue3.0
-</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link router-link-active">
-  服务端渲染
-</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link router-link-active">
-  node.js
+  vue
 </a></li></ul></div></div> <!----></nav></div></header> <div class="sidebar-mask"></div> <aside class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="/" class="nav-link">
   首页
 </a></div><div class="nav-item"><a href="/page1/" class="nav-link">
   项目积累
 </a></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="前端技术" class="dropdown-title"><span class="title">前端技术</span> <span class="arrow down"></span></button> <button type="button" aria-label="前端技术" class="mobile-dropdown-title"><span class="title">前端技术</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link router-link-active">
-  webpack
-</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link router-link-active">
-  TS
-</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link router-link-active">
-  vue3.0
-</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link router-link-active">
-  服务端渲染
-</a></li><li class="dropdown-item"><!----> <a href="/page2/" class="nav-link router-link-active">
-  node.js
-</a></li></ul></div></div> <!----></nav>  <ul class="sidebar-links"><li><section class="sidebar-group depth-0"><p class="sidebar-heading open"><span>前端技术</span> <!----></p> <ul class="sidebar-links sidebar-group-items"><li><a href="/page2/vue.html" aria-current="page" class="active sidebar-link">vue</a></li></ul></section></li></ul> </aside> <main class="page"> <div class="theme-default-content content__default"><h1 id="vue"><a href="#vue" class="header-anchor">#</a> vue</h1></div> <footer class="page-edit"><!----> <div class="last-updated"><span class="prefix">上次更新:</span> <span class="time">2021/5/16 15:48:37 周日</span></div></footer> <!----> </main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.3c6c1c75.js" defer></script><script src="/assets/js/2.72be0d30.js" defer></script><script src="/assets/js/16.57563cc2.js" defer></script>
+  vue
+</a></li></ul></div></div> <!----></nav>  <ul class="sidebar-links"><li><section class="sidebar-group depth-0"><p class="sidebar-heading open"><span>前端技术</span> <!----></p> <ul class="sidebar-links sidebar-group-items"><li><a href="/page2/vue.html" aria-current="page" class="active sidebar-link">vue</a></li></ul></section></li></ul> </aside> <main class="page"> <div class="theme-default-content content__default"><h1 id="vue"><a href="#vue" class="header-anchor">#</a> vue</h1></div> <footer class="page-edit"><!----> <div class="last-updated"><span class="prefix">上次更新:</span> <span class="time">2021/5/17 9:54:20 周一</span></div></footer> <!----> </main></div><div class="global-ui"></div></div>
+    <script src="/assets/js/app.054fe82c.js" defer></script><script src="/assets/js/2.72be0d30.js" defer></script><script src="/assets/js/16.57563cc2.js" defer></script>
   </body>
 </html>
