deploy: af2d8949be1dd6d9784e02bce6fb02817ca60d73

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <meta name="description" content="查阅知识">
     
-    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.19cd1de5.js" as="script"><link rel="preload" href="/assets/js/2.72be0d30.js" as="script"><link rel="preload" href="/assets/js/3.3e984bc1.js" as="script"><link rel="prefetch" href="/assets/js/10.d3e067c0.js"><link rel="prefetch" href="/assets/js/11.46791625.js"><link rel="prefetch" href="/assets/js/12.64d06336.js"><link rel="prefetch" href="/assets/js/13.d4e486ba.js"><link rel="prefetch" href="/assets/js/14.b355be85.js"><link rel="prefetch" href="/assets/js/15.c0775f17.js"><link rel="prefetch" href="/assets/js/16.57960cc6.js"><link rel="prefetch" href="/assets/js/17.70f16e64.js"><link rel="prefetch" href="/assets/js/18.d8d2c43c.js"><link rel="prefetch" href="/assets/js/19.edb08835.js"><link rel="prefetch" href="/assets/js/20.cd8bed07.js"><link rel="prefetch" href="/assets/js/4.fca37cb5.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/7.f4adb7c6.js"><link rel="prefetch" href="/assets/js/8.87a2f57b.js"><link rel="prefetch" href="/assets/js/9.b71b661d.js">
+    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.547b3995.js" as="script"><link rel="preload" href="/assets/js/2.72be0d30.js" as="script"><link rel="preload" href="/assets/js/3.3e984bc1.js" as="script"><link rel="prefetch" href="/assets/js/10.02d4d268.js"><link rel="prefetch" href="/assets/js/11.16d83efa.js"><link rel="prefetch" href="/assets/js/12.ca7686bf.js"><link rel="prefetch" href="/assets/js/13.594269f3.js"><link rel="prefetch" href="/assets/js/14.75af415d.js"><link rel="prefetch" href="/assets/js/15.2e0cf7d3.js"><link rel="prefetch" href="/assets/js/16.88d5fe40.js"><link rel="prefetch" href="/assets/js/17.15fea54c.js"><link rel="prefetch" href="/assets/js/18.b2ba0bc3.js"><link rel="prefetch" href="/assets/js/19.d8f42da4.js"><link rel="prefetch" href="/assets/js/20.1d3ba69a.js"><link rel="prefetch" href="/assets/js/21.e3dea669.js"><link rel="prefetch" href="/assets/js/4.c6fd230b.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/7.f4adb7c6.js"><link rel="prefetch" href="/assets/js/8.0994a058.js"><link rel="prefetch" href="/assets/js/9.84c074b2.js">
     <link rel="stylesheet" href="/assets/css/0.styles.692262fb.css">
   </head>
   <body>
@@ -39,6 +39,6 @@
               </h2><h2><div class="circle"><span></span> <span></span> <span></span></div>
                 熟悉node.js，并可以运用接口服务 
               </h2></div></div></div></div></div></div> <!----></main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.19cd1de5.js" defer></script><script src="/assets/js/2.72be0d30.js" defer></script><script src="/assets/js/3.3e984bc1.js" defer></script>
+    <script src="/assets/js/app.547b3995.js" defer></script><script src="/assets/js/2.72be0d30.js" defer></script><script src="/assets/js/3.3e984bc1.js" defer></script>
   </body>
 </html>
