deploy: 29bd230a02dc9938670b32c3c8fe10cc40d74e7d

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <meta name="description" content="查阅知识">
     
-    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.b41dfb88.js" as="script"><link rel="preload" href="/assets/js/2.72be0d30.js" as="script"><link rel="preload" href="/assets/js/3.3e984bc1.js" as="script"><link rel="prefetch" href="/assets/js/10.02d4d268.js"><link rel="prefetch" href="/assets/js/11.16d83efa.js"><link rel="prefetch" href="/assets/js/12.0eb48dc1.js"><link rel="prefetch" href="/assets/js/13.261a9d26.js"><link rel="prefetch" href="/assets/js/14.86d11c51.js"><link rel="prefetch" href="/assets/js/15.9685f86b.js"><link rel="prefetch" href="/assets/js/16.36c396b8.js"><link rel="prefetch" href="/assets/js/17.ad1128f1.js"><link rel="prefetch" href="/assets/js/18.975adf0a.js"><link rel="prefetch" href="/assets/js/19.3f742569.js"><link rel="prefetch" href="/assets/js/20.6ec44bc9.js"><link rel="prefetch" href="/assets/js/21.abc67976.js"><link rel="prefetch" href="/assets/js/22.746dec44.js"><link rel="prefetch" href="/assets/js/23.cd32f555.js"><link rel="prefetch" href="/assets/js/24.6b201780.js"><link rel="prefetch" href="/assets/js/25.cdb7a918.js"><link rel="prefetch" href="/assets/js/26.1271d2bc.js"><link rel="prefetch" href="/assets/js/27.135f46bd.js"><link rel="prefetch" href="/assets/js/28.4c772de5.js"><link rel="prefetch" href="/assets/js/29.7e474a9c.js"><link rel="prefetch" href="/assets/js/30.73891961.js"><link rel="prefetch" href="/assets/js/31.2802947d.js"><link rel="prefetch" href="/assets/js/4.2090f9f9.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/7.f4adb7c6.js"><link rel="prefetch" href="/assets/js/8.d0b89722.js"><link rel="prefetch" href="/assets/js/9.84c074b2.js">
+    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.c3a4fe39.js" as="script"><link rel="preload" href="/assets/js/2.72be0d30.js" as="script"><link rel="preload" href="/assets/js/3.3e984bc1.js" as="script"><link rel="prefetch" href="/assets/js/10.02d4d268.js"><link rel="prefetch" href="/assets/js/11.16d83efa.js"><link rel="prefetch" href="/assets/js/12.0eb48dc1.js"><link rel="prefetch" href="/assets/js/13.261a9d26.js"><link rel="prefetch" href="/assets/js/14.86d11c51.js"><link rel="prefetch" href="/assets/js/15.9685f86b.js"><link rel="prefetch" href="/assets/js/16.36c396b8.js"><link rel="prefetch" href="/assets/js/17.ad1128f1.js"><link rel="prefetch" href="/assets/js/18.975adf0a.js"><link rel="prefetch" href="/assets/js/19.3f742569.js"><link rel="prefetch" href="/assets/js/20.6ec44bc9.js"><link rel="prefetch" href="/assets/js/21.abc67976.js"><link rel="prefetch" href="/assets/js/22.746dec44.js"><link rel="prefetch" href="/assets/js/23.cd32f555.js"><link rel="prefetch" href="/assets/js/24.6b201780.js"><link rel="prefetch" href="/assets/js/25.cdb7a918.js"><link rel="prefetch" href="/assets/js/26.1271d2bc.js"><link rel="prefetch" href="/assets/js/27.135f46bd.js"><link rel="prefetch" href="/assets/js/28.4c772de5.js"><link rel="prefetch" href="/assets/js/29.7e474a9c.js"><link rel="prefetch" href="/assets/js/30.878814b7.js"><link rel="prefetch" href="/assets/js/31.8ed63ef2.js"><link rel="prefetch" href="/assets/js/32.51e3b9a2.js"><link rel="prefetch" href="/assets/js/4.359a9363.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/7.f4adb7c6.js"><link rel="prefetch" href="/assets/js/8.d0b89722.js"><link rel="prefetch" href="/assets/js/9.84c074b2.js">
     <link rel="stylesheet" href="/assets/css/0.styles.692262fb.css">
   </head>
   <body>
@@ -20,6 +20,8 @@
   每日一题
 </a></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="前端技术" class="dropdown-title"><span class="title">前端技术</span> <span class="arrow down"></span></button> <button type="button" aria-label="前端技术" class="mobile-dropdown-title"><span class="title">前端技术</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/page3/" class="nav-link">
   vue
+</a></li><li class="dropdown-item"><!----> <a href="/page3/" class="nav-link">
+  qiankun
 </a></li></ul></div></div> <!----></nav></div></header> <div class="sidebar-mask"></div> <aside class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="/" aria-current="page" class="nav-link router-link-exact-active router-link-active">
   首页
 </a></div><div class="nav-item"><a href="/page1/" class="nav-link">
@@ -28,6 +30,8 @@
   每日一题
 </a></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="前端技术" class="dropdown-title"><span class="title">前端技术</span> <span class="arrow down"></span></button> <button type="button" aria-label="前端技术" class="mobile-dropdown-title"><span class="title">前端技术</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/page3/" class="nav-link">
   vue
+</a></li><li class="dropdown-item"><!----> <a href="/page3/" class="nav-link">
+  qiankun
 </a></li></ul></div></div> <!----></nav>  <!----> </aside> <main class="home"><header class="hero"><!----> <!----> <!----> <!----></header> <!----> <div class="theme-default-content custom content__default"><div class="star"><div class="background"><canvas id="startrack"></canvas> <div style="height:700px;background:#212121;"></div> <div class="cover"></div></div> <div class="main"><div class="intro"><div class="container"><div class="hello"><h1 class="slogan">你看那个人，Ta好像一条狗啊...</h1> <h2><div class="circle"><span></span> <span></span> <span></span></div>
                 AOMR
               </h2></div></div></div> <div class="intro"><div class="container" style="height:700px;"><div class="hello reset-bottom"><h1 class="slogan">近期目标</h1> <h2><div class="circle"><span></span> <span></span> <span></span></div>
@@ -43,6 +47,6 @@
               </h2><h2><div class="circle"><span></span> <span></span> <span></span></div>
                 熟悉node.js，并可以运用接口服务 
               </h2></div></div></div></div></div></div> <!----></main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.b41dfb88.js" defer></script><script src="/assets/js/2.72be0d30.js" defer></script><script src="/assets/js/3.3e984bc1.js" defer></script>
+    <script src="/assets/js/app.c3a4fe39.js" defer></script><script src="/assets/js/2.72be0d30.js" defer></script><script src="/assets/js/3.3e984bc1.js" defer></script>
   </body>
 </html>
